--- a/UI/WinForms/AcercaDe.resx
+++ b/UI/WinForms/AcercaDe.resx
@@ -521,4 +521,120 @@
         HpEEH62bouE0dHoerReIq6fF2L+CFR5SbZdOY8hLHSBewSTk14HNHjVR0WQf8HfkWPfsH//Z
 </value>
   </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAAAAAAAEAIAAnGgAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgEAAAA9ntg7QAAGe5J
+        REFUeNrtnXmYVNWZh99z762qruqq6pUGulmbfW9AWxBB0ahINCQuEHU0aMYYDWZmHDGajKPJODOOZpwZ
+        x8Q8k2RcJo4mY0aTGBF1YtzYFQFF0DQgmzRL0yu91PLNH92NrA3VdbvqVPV57/PwQMO93HN+v/Odc88K
+        BoPBYDAYDAaDwWAwGAwGg8FgMBgMBoPBYDAYDAaDwWAwGAwGg8FgMBgMBoPBYDAYDAaDwWDIAFRvSahQ
+        Rx71rGAZKzmf8YRQ2NhAhDqWsYNKzmYSqjdlSzan9BB+YjzDAeK8yDaCrG+3gkL9Wu22Q0rh4CholahM
+        ik2NKwEoJ4cYZ1PKpyzirCy3QxambT9FPECEVVTxEWI97tmR+4dQS5+8gfUDI8WEW4L1/tZAo09ZglIK
+        EHFiuS2BQ/56Odhak78nvOfAZ2Nriuv/rVXFSwgxnWK+xEI2ETAG0JdGcnmADazhY8S6L7xpYGz8vjH1
+        gz7r31YYKWwtsHLFGzn8rwU5JhtUx++cmGpR9d790X35O+wtRZ94q4bs+ELNTa15jGU0N/I2dxsD6MUr
+        lPNjVvIO4lxbtHNUzeSGisbR0SFtxVEnCkdIfWRy5YQZIR1/EkC126He+1nu1sCG3NX5G87a/cOmImZy
+        Nos5SKExQLp5mTHcxXK28f28NaN3nb2/sm5c2+BIOHaMvMljYbV59gT+VLC2z/KB7z20c3Ckkjn8gCqG
+        GQOkg1ryuYVXqOLGgvUTa7/QcF7TuJaC2AlLt3tZJVh42vw7QmuCS4vfeGT75Og0bqAmqyoF7XmXf+AX
+        TAXuCpw1bcgP8t/x1VlCCi8lSpyov6rP0yOumVUmFPBlYKmRpuf5D87mFvoiVA4cfGPhSzkH7JRKf+zl
+        tOV+0PdfR56zwA8T2cu3eN2I1FM8AMzB4n7v+Ol9H/ZvtCPtpTGdBlCiRInnQPC3ZddPKYEybudCI5X7
+        3INwHnBFbvncwmd9+6y0yn4iIzht/tXFi4cNhmLmMcZI5h5PAOcDl4QHzc97ydPQXup0M4AlSqy498O8
+        vy0bDkV8jYlGuuR5CS9zgSuCg64KveI0t0uvnwGOah5uDt5bVg59+R1fMRImwzwWkcciX/nc8IueQ/rK
+        frwJPBvDi4f0h5HAT4yQ3eEhhBEI4yoL/8tTZ4mOgb+rhqEV964uWDgl5GE6k42ciXEp5cwFpg4oud+3
+        KzNkP9Flt+T8ps/sv7NKEL5mZD1dzkHozzd9g68OrLIzptyftEWwL/ehwYOgghIuMeKeitsYx/nAsOHh
+        nzpNZFDg78oGnjWF8y/zFgJTjcRd8W2EYdzqK/uznA2ZLvsxlUFD4Edlg2E4fXneCH1ivsg3gamDCx7z
+        NFkZX+6P7yfwrApd/IwqAp40Yh/PBGYg1vjLgqt16+Vz77L2Be4aEg7wDuON4EfyMDCBG4JDvptzIBtq
+        /ZM3Ca2o79mS0VBhLPA5j/EaDmcNLPy5E8le+Y/4LlhbNFcYSZmRHg6wkO8CY88Mv5HNwh9jgerALRd4
+        iwixoHfLv57LuRpRExfkVmVvzX+8AZRYhwIPloQLgat7swHO41Ke8Y36K39N7xD/KCPEnCeGlAH0763y
+        j2Ua9wWG3u9r7n3yt8eCnFf6jvbyVUb1RvnHUMGXgqU/dNqyu9l3ir6BZYFJMJ+5vU3+PgznK6GSR+xo
+        7yz9n1/2u3mVsJAre5P8ExjJ8HDho55o7yz7R8cBZ0PROXBT7/kiGMdk5oXzf2TFerv4nZezsXgmXE/f
+        NKhhp/a/W8lmbAYEV/x93a0xq7dVfCdD+rRVhtd8sOtLxNmbzQndymwu4B5/6UNOtLc2/U7WHHTWFEz0
+        AndkcwTYjc01zsN3Vd8ZdXQzp58SSilnJEMoIheLNuK0LxBNQQwgXioVA985uH8Z9/JGCtOdwrWBD7KN
+        H1P253v/JRoUdEFRRiXTmcBACvHiQYjQzB4+4g3+wNaUvYmF/7XBN9TvjLJHt9LhBv/GcmDEPF+1LmEX
+        UTJJHpQPpUVOTEw2ymIpltSsP1KiJOfJinBfirLRAADlk30f6SP/ALlftsupiMoLMkxStQRNRcP3X+5M
+        4gvZJv0YRjG5NPh/+jT8ZsrbEhcR6fj1xMQlLiIvSVnKjGnXh74G8zg7m+S/knO4NpD3Ex3kb//6+JJs
+        kUT4Z3FSVhF4Pg1nlfpczXUIJX9ht+oS/C+W7aco+ceyR6alyACWWOJ9q2xgCSXZIf+d7bX/F7x7dAn+
+        42RDgvLHReTBFM1Vap8vkPPTaf6x2TFEVM4wzhicu0KXjp+A/EK6wwopTGGUslvyboWr+Xqmy1/JDG7z
+        5D9qaTPXb540JFT6O6mWiSltp3i295lmZ7r830GAfl91GnQJ/7nyO+kezTI3xW0V3++H5Jf2+NdAjw7I
+        /A8lDB9+8LvxoA6bkSmggnO6ebeH4hS/b+Ti6q/vJr+H+wR60AAPM5JrvPvuaJugRzwSYBb53baPk+K3
+        FTvyF4WVS1mhR/Z1jwFfcep1Cf+IR34l3SUqC9Pwxr7/HRUqozITI8A5DGVc3wN3xEL62DHEkG7fG+VA
+        Gt448sXPrtnFZZlngFcZxlZ239A6Xad45O12BQAN7EjLKx+6raT8QfplmgGu5HnKJzXdLFptRauSSO4W
+        tqfhjYX4uPpvPKXyuEunjDwVv+BCvukN/1y3WT/9ZHO32wAPpyUtSpTYu/MqM7BHoPwST61O4iNIvrzT
+        LfHjUiPnpvG9vU9N8Q7nhkyR/j4u4Kpg+EX9Vvt55Olulv9nxZ/G97bqwpk0LCDAsAWeZh0nfX5b4h1j
+        /IkMBO2SGWl9ayW+300MjmBRJsj/T8zgonBwqZ6zfifKroRGAmMSk1ZZLOndskaJfajkqgyKAUOvcDTd
+        19ORHyUY/GPyqASFNBtAiX/J5OBYbtdd+ieZzRcDod/oO+d/lKw7PNXr1MG/TX6UwmHgri67qc+8DCj7
+        k1EMm+vRqPv3+OtCqTrNauAzuUuCmry1Ev//nOubwn06y7+Gm/k7b8Ezuq/6mSGvS+wU4jfJb+Vc0edL
+        Rom9r3Can7E6G+BRypgy3bdP/2VffeV2WSWNJxn22S7PyJclrNUbK1GS87AwG3cX1bg6xjmcnZReFSnu
+        mVO73KSah3maKUxnLGWE8aGI0Eg1H7OW1VTR1rEoTKeUROcWPRLbdqerz3Sxr34/8/CXL1/SNFJz9Y/C
+        g59ccoAojTTTovG7qnjObc0/1vb1BBi7yInrHfwz+3JeLguUuqqai6OBt3J3oPrSWO85eT0NxCsbplRz
+        qY4GeJ6XWTq+aarutX9mIwWRL8co0NEAZ7OV6jltxSYA9KgBiJxfWvIK6/QzwI1cGaqfHde+/Z/ZKOJj
+        W2ZWM0M3AyxlLVUVrRVGoh6PAb6Wi0XNce15LvUDjGU3/guj+UagnqftjAHF8X2aRYC7uS334PS4Uaen
+        yz9CfFTkjGrXZgq7YoB6PmDDyBZzVmpqTBBoPjfOcJ0MEOJ9ama2ZcmCdv2jQMvEQTnP6GSA+xG7pjJm
+        tEkRsTF1ZfU8pY8BNjC/sG68+QBMGQNk+iGu18UA+3iffWOiQ40uqSLuxCpx6WRyFwxQzMccPCMaNn2A
+        qaNlVH//W648yYV+gB8gatCYaEZnqEM+/elPCUH2s4nNRAClbb9mfEhtETs1McAObg7UjsjUFkA+I5lG
+        JWMYQAgPFlH28wIPpGcx6OlS6ow4tPMOfqiDATZj9Y0PzjzpQ1RwEbMZQ+HhnwngoZRbKeNmqrV9dwm2
+        jou97sbhk0kbYB9nMnBUpK8GuXJKOqd42QxnDpcy9biB1c/bMfNYyT9qnBYZgSszhJM2QDHb8I+O+zPB
+        AAIEqGQBcxiEBUgXc+Lm87jG+3ZHB+d4PotoYIDHgZaBmdEJlM+FXMt55NHeq941I5ig88btpeRatck/
+        JunPwP/ke/bBUg0y5CR0HvhQzHU8x5PMI+/wz7s+DCKX0Tq7uV+sT6sLj0naAFPY5W/T+PBLQcjnan7N
+        z7gAfwL3wQCdDVDsDHV4OOnHJF0FvE8krPro+RGoEPxcxC2chy/he6FA454A/JHyqAsnkCdtgE0Ei1qL
+        9cwom7NYxBfp7kZl2h1sdBQ5Axp5Lv0GyKWoz86AXv2A7XYs51auo4Su2/pd0aj1DMfWfheppUm/YJIG
+        eJ35SJ54dJM/zHxuY+Lhn3SPWo3lF6JFb9skXfKSNMAwDnAwFPPoVAUopnEnlyRc6x+P3oc42nlDPb7o
+        e+k1wGri5OQ1azEQ2N7PV8xNfIsyuh/4O2llt9YGIFDjs5vTHAHWAjnBZg3Kv0JQzOQezsdGXDjwsTEt
+        W0OePjH/Xm/yT0nSAO8BEtJh4FTI5yb+klLcWtK9l880ll+BT7zJh94kDbAViIbSnhUIE7iXeR3JcadG
+        2pKW7aETwCtO8lZP0gAfE1RNaR4IEjxczn2ud9yu13qvAEHZbsznStIAMRpRnvTto6EQiridRYRP2uiT
+        hGOCoGhjtd7lH1HKhVDnQmeXpHEnY2Ec93MZ9klFjtK9I9L38KHmBkC5UfD07u08ZQ5cxINMRE5Y+uvZ
+        wFu8TzH3kPh8lY3uTLnrydSLG43vjDWAQriMn9D/iLLfGeyjbGYJL7KOWiCHK7thgFUc0r34x3FhMWZG
+        R4AmPMdmCk0s55csZefhsuFJOJGKZlZqnnZBxUQTA6RpJEjxRx5n8RHhv57XeJI/Uk/7hI92CxR0o/zv
+        1L4FoMCV3TiSNEAx+ySnpY3UfwcIEOMxLqQCQdHEK/yUNw4H7s/fZ3A3DLBO606gjgggSpLP9yS/JMeg
+        8DemLxu28q+0EudNFnI9S2g+QWNwYjfmA6ykTXMDADEVT3tP4DDewm5IXx4onudMdvHzjpG748uDzZkJ
+        9ww2aN8HAEAk7kLlm6QBJvMEbfXpzIUGvkMLJ5+VXMSkhJ+5jc3aq69QLYE2RbLhN8kq4GKgqRZJV0+g
+        AIeId1HGy0l80dJa9qP/UleruX/boHRHgGr8OHVNEfGmKxuky1IiTCIvoZkBAiwnmgEGiDfWtCWf7UlG
+        gHPJo7TOimiSJ8dhU5lgEhU1vKu9+AAcrIklv3Al6fGkKNFaInqWFyGfCSQ6FFRFFfpveC949hBPfleO
+        pA3gJ1JnN2qRJydgCIln0RpqMiIAxLZB8scIJW2Ai5hVn3NA1/Iy6Yil36eZrSzPCPlVq2yzXVjAnrQB
+        HJy6yB49qwDF1IQTuJf3M8MADfYOSH6zuKQNUM/jbQWabqaRR0XC92zi04wwgOyNujJrPWkDLEaJ+lTP
+        CDCI8oTvWU2Dlmk5jt2+Wje+vZM2wGT6UbLV0XKDgHEUJ3hHGysyQ37U1v4tbuzN7MK0wnyCVbaWxaYS
+        J8HPud1syBADsHGLuLFfcNIGUEyl3zZnl345FKICEuwD/BANE3JcjitUk2xQuNH/5kIEyOHCAz4NR08G
+        MCLhe1accEBZLwRgn7XV4mM9DHANN0VyPtAv28aR2PbliiZWoX8foALY5lS7M5vPBQO8QD7562ztZlCc
+        QaKr1neyUXPxOyOA9WFLk8+Vp7lggEcYS9EH3mq9YkAuUxO+Z53GW0MeRVytUbgzDcMFAyhGU7nL/4le
+        obOUxE+wXYG2w5pH5TfVrLE4VxcDwDd4qKlonYVOjCbRA0xqM2MiGILaZG1zeEMfA7xKMX1XeLQqPmeS
+        k+Ad21xpVaeE5W2Nbq3IdcUA93ABQ97N1egTOofJCd/zHgcyYB4Q0MgfoNmlh7kUt2fxNzvz1+mTff0Z
+        k+AdwnIy5NSjKrXBdm3auksGuJVRrSX/52jRDlTASBLdvPQAa9G/DwAU1prS/QHXnueSAZo4n5LXfNos
+        qJ1Coln0CVUZUPgVtKolO+LuDb24ZIAgF7D4T0EtJtMIXs5MuDSv6WJXQH2qNoFPZJnFtboZAL7HzEjB
+        i56oDplVwpgEZYuwrOts1yYCqDcL93h4Wj8DbGU2g9/M2aJDZo1MeJ/vvazv4m8LuOK4s0XSRIN64YC4
+        eUazawYYyrdYsiP/jzp0B00hmOAdW06wH0hnBBnNYzzFN9Gio2tdfJVytb/SxVRtJC8e/m+7Nt155HRj
+        FGDTSdbY+fkznmMBAW5nrgb6q1ekTuMz2q/imkDoJSS9V3/ZIIly9wmeo2SyPCWNIhKXuIislZFpThk7
+        rAn6qt9B2decNiUqjdk0U2oTlD8mf36E7O3vXi73yrYj/k1cRJ6VAklf2pTYT+Q6OQx0OV66yJvchr3k
+        4PrmqelsClYQTviez/sABUU587mOMcd9R4yliIPp+yisl/9uiuLygZauGmAW2xm0t//zLVPT9+lkU9mx
+        cfTpYx1eQBZiAl9mHiOOur9997FNfJs/ka6UKdRy6x2LAO5ux+DyLmGPMJTAL2sWtg4nDSiE4m4sB4Wv
+        so1GxjODihMuJlOsZVGXfQU9TsR6Ntp0CUvQmtdZjFD8oJWmWhI5Sw4k3ASMi0hEIkf86VjekoqO56fr
+        Uss8xQ65rivm8sftbNbSn7wnnG3pqCkFGE1+NyIHOIeD4dHBXxB+y0LeJ507IquI+s/Ifj9NuhsAXmU2
+        f9oYfE6lqbE0xtUkKdr4KTdTldbxAEGttl9waO2BZ7tuAMUqSsj/uZOWwTVPN9YCdBVPDvJ9/po9aT4Q
+        o73898uErevaM+4mIO+7Vjz1NWWBrBD32CzzxUl3548g1hv+opyEu7fTSCUlDOzvWZX6rBooVS6JH5eX
+        ZaogVlqbfghCk30l/FfmyA/wGlBwg92a6n6zCVKdtPBxEamVf5K+aW73d/ZLql87AQ9DM8sAlzCSKWH/
+        71NtgLPloAul/325QjwayI8osfbYMzNL+yMomGXvSW2GzUjCAO3f/w3ymAw/3KuQXvERJfYDPuVkUv3f
+        ye+ZzFPK/4DKGAOIxGWNLBCfBs0+BLHEEmuVM8DK1EMdRhKm3wAnpU3Bym70A3ayR/5RBh8xHqhB+G+w
+        r8zY8N9J3uVWfeoybZhs71bgb5RfyjliaVL2DxvgPwJeH0WZK/71jGWOx/9o6jI2X5YlXPJb5DW5XHI1
+        KvsdVcAGe4SVGWuVTk4hYfoN8qxM3UfTIwmJ3yqvy3VSePhujcp/o3Mt5OPLbANcAUB4jr0/FdmrBLlI
+        6k4yoncs9bJErpYircJ+Z/NPif1onjeAndnyA0xiBP+ugvdZMZWSCBCQp07DANvlcblYQhqW/HYD2G96
+        yjwJ73CiKUX0YXSB/7cqBVmtBBkhbx7u0+u8Pme/vCp/JWO16OM/mYnVp84MgD7ZYYDHAIfS8Z51qSpr
+        w+VnsveYKHBIquQ3slgqO8q9rpclVpP9dShKeH+D7pGSRubjeLiBwEVNT8b6SQqSJPiYxCzGUkIOdexh
+        CxvZzG5a6DxuXk8USngkcGe8LSdDNq0/TYYyDsj5htWU2tKUIwHxal3ijw7+llgvOn08pO4EnhQ1M2sp
+        Io/yDTV50Wmp+7QVokQyZdsHFAres2+NfhpP4Tun7DtjP172x0KrWobEJ2R450aPGcDa4bslunoBcfZl
+        ayJDlA/KeVWvLldtqoADnq/CwMw+z7trlgIWfUd63jJyHyd/g3NLiQpl2sSPRFkAKHLH2yt163xJ88df
+        c85dZzqh7Ba/nYk8ioVnkrXGWOBw6W/1fX+Cr4gwv+oNFiigBC/2ZLVGh0lXGnz8tXr/foC/qBsLWjIa
+        C6vCMhWBWI2eewb6wz2w6Etzgii84+3e3hyscRaN8OQR6G3yQ4jheAmNdJb0xijQPjCmdqvrclWg95X+
+        TgsAhPpZP1PR3mgA6wN7Dmkf8U/j/9/GJKqxG3ldlEzGS69BoVBvqW/E3nbQeMunVGBh49DXUTeqXZYO
+        y7BSUPYtsaLWU55BFvnd2Mwm68jDRw5enPOsVb3EAAfV31hhG6s3Bb1TxQELG3uY9bSK6jdBy+Wm30Z1
+        BVbGz/Z13wJgYYetu6292TpUpMSKWv9rTQAj/wlRQEjZF1pvZ2MMUMJudafKV3iyebzPjcpAlVo/tA5m
+        jwms9rL/sjqnY9KHoesoYGHZ1mVqRRaF/u3qDlWgjPynawIFqAHqAVWtNFuv141GX5P6lVVpyn7CcQBy
+        lZqlXrBbMrcyUHG10rpaBWzsbFjjk0oK6AiYQet6tYJ4RhrgE/Ud1d9G6XHSQKZGAhv6qe+oTUrDJVxd
+        BP6t6h/UKL8J+25VB2q4+oH6ODPaA2qLelCN0+moqQzHwodCYY1Q96tP9I0DSlSM9dzLmAJlWvyum8DC
+        IoQ1Qn1PrVZt+sUC1WItU99uP83BNuL3VHVgAapELbSWUKeR/NU8Z823itp7MTJL/Ayzqo1NBFC5Mp0r
+        mM3wzu+rVC/37GibNMiH/IEXZL3V2v4O+h8+m9EGAHCIYhMjoFoGMVsuYRoDsFJugDr1oSxXL8u7HMw8
+        2TPaAABe2gALAY+Uq1kyi8lqqPTw3MqOheV7+YgV6iW1Pl6r81LzrDbAsYkQ2ypRE+PnMp1R9MHlY8w7
+        MqlBbeMDWcGbVNEAChtcPcTRGCCphFgIEmQQ49VUGSuDKKIg6fnWcVqoUbupUhtkOR/JATsaz/hSn5UG
+        ODI5Aj7CFDJQjWMMQykhj5Dk4GBjK6v9cLjjxZaoihGlhUPUyV61nU9lJ5+yQ+2l0Y7GOp+dhTmWVVjI
+        ETLZSnwECUmQfIIECJFPHrnk4MFGiNFGC83UUkc9DaqJeg6pxniDao3HP8+kbBM+iw1wfAI7D3yRjp8I
+        kIujmmnDJ620D9Z2/m37qYPZFeh7sQFOlGALId4RKVSH6PEO0Q0Gg8FgMBgMBoPBYDAYDAaDwWAwGAwG
+        g8FgMBgMBoPBYDAYDAaDwWAwGAwGg8FgMBgMBoPBYDAYdOP/Adi+DVjqrWe8AAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
