--- a/UI/WinForms/Entidades.resx
+++ b/UI/WinForms/Entidades.resx
@@ -566,4 +566,7 @@
   <metadata name="ErrorProv13.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>688, 57</value>
   </metadata>
+  <metadata name="ErrorProv14.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>804, 57</value>
+  </metadata>
 </root>
